turtleart.flower.Flower.scala.error
Compilation error:
Flower:28: error: illegal start of simple expression
  for (i <- 0 to 7) [
                    ^